<resources>
    <string name="app_name">207_demo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="organizer">Organizer</string>
    <string name="speaker">Speaker</string>
    <string name="speakers">Speakers</string>
    <string name="attendee">Attendee</string>
    <string name="vipUser">VIP User</string>
    <string name="allAccounts">All Users</string>
    <string name="accounts">Users</string>
    <string name="msgAllAttendees">Message All Attendees</string>
    <string name="msgAllSpeakers">Message All Speakers</string>
    <string name="addSpeaker">Add Speaker</string>
    <string name="addAttendee">Add Attendee</string>
    <string name="addOrganizer">Add Organizer</string>
    <string name="enterFriendName">Enter Friend Name</string>
    <string name="add">Add</string>

    <string name="signUp">Sign up</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="signOut">Sign out</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contact</string>
    <string name="allevents">All Events</string>
    <string name="myevents">My Events</string>
    <string name="announcements">Announcements</string>
    <string name="msgHint">Type your message here</string>
    <string name="send">Send</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="attendeeAcc">Attendee</string>
    <string name="signUpEvent">Sign up</string>
    <string name="cancelEvent">Cancel Event</string>
    <string name="addEvent">Add Event</string>
    <string name="addRoom">Add Room</string>
    <string name="cancelEnrolment">Cancel Enrolment</string>
    <string name="createEvent">Create Event</string>
    <string name="eventTitle">Event Title</string>
    <string name="startTime">Start Time</string>
    <string name="duration">Duration in Hours</string>
    <string name="vipOnly">VIP-ONLY</string>
    <string name="time">yyyy/mm/dd/hh</string>
    <string name="next">Next</string>
    <string name="eventType">Event Type</string>
    <string name="username">Nancie Lee</string>
    <string name="selectRoom">Select Room</string>
    <string name="back"> Back</string>
    <string name="finish">Finish</string>
    <string name="selectSpeaker">Select Speaker</string>
    <string name="welcome">Welcome</string>
    <string name="rooms">Rooms</string>
    <string name="roomNum">Room Number</string>
    <string name="roomCap">Room Capacity</string>
    <string name="newSpeaker">New Speaker Account</string>
    <string name="newAttendee">New Attendee Account</string>
    <string name="friendName">Friend Name</string>
    <string name="eventCapacity">Event Capacity</string>
    <string name="announceSpeaker">Announce Speakers</string>
    <string name="announceAttendee">Announce Attendees</string>
    <string name="typeHere">Type here</string>
    <string name="createAccount">Create Account</string>
    <string name="changeCapacity">Change Capacity</string>
    <string name="top5Events">Top 5 Events</string>
    <string name="eventEnrollment">Event Enrollment</string>

    <string name="useremail">nancielee@gmail.com</string>
    <string-array name="event_types">
        <item>TALK</item>
        <item>DISCUSSION</item>
        <item>PARTY</item>
    </string-array>
    <string-array name="user_types">
        <item>ORGANIZER</item>
        <item>ATTENDEE</item>
        <item>VIPUser</item>
        <item>SPEAKER</item>
    </string-array>
</resources>
