<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createEvent"
        android:layout_gravity="center_horizontal"
        android:textSize="50dp"
        android:layout_marginTop="60dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventType"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="39dp"/>

        <Spinner
            android:id="@+id/event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:entries="@array/event_types"
            android:gravity="end"
            android:layout_marginStart="50dp"
            android:textSize="24sp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:hint="@string/eventTitle"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/event_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:hint="@string/startTime"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="30dp"
            android:text="@string/time" />

    </LinearLayout>

    <EditText
        android:id="@+id/duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:hint="@string/duration"
        android:textSize="24sp"/>

   <CheckBox
       android:id="@+id/vip_only"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/vipOnly"
       android:layout_gravity="center_horizontal"
       android:onClick="onCheckBoxClicked"/>

    <Button
        android:id="@+id/btn_to_room"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/next" />

</LinearLayout>