<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".roomSystem.SelectRoomActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addRoom"
        android:layout_gravity="center_horizontal"
        android:textSize="50sp"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/room_num_added"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:hint="@string/roomNum"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/room_cap_added"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:hint="@string/roomCap"
        android:textSize="24sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/room_added_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_weight="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/room_added_finish"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:layout_weight="1"
            android:layout_marginEnd="24dp"/>

    </LinearLayout>

</LinearLayout>