<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterFriendName"
        android:layout_gravity="center_horizontal"
        android:textSize="40dp"
        android:layout_marginTop="96dp"/>

    <EditText
        android:id="@+id/friend_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="96dp"
        android:hint="@string/friendName"
        android:textSize="24sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/friend_back_contact"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_weight="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" />

    </LinearLayout>

</LinearLayout>