<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/announcements"
        android:layout_gravity="center_horizontal"
        android:textSize="35sp"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/announcement_to_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center_vertical"

        android:maxLines="2"
        android:hint="@string/typeHere"
        android:textSize="24sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/announcement_back_event"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_weight="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/send_announcement"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_weight="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/colorReceived"
            android:background="@color/green"/>

    </LinearLayout>

</LinearLayout>