<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CONFERENCE"
        android:layout_gravity="center_horizontal"
        android:textSize="50dp"
        android:layout_marginTop="96dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="96dp"
        android:hint="@string/email"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/password"
        android:textSize="24sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:layout_weight="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorReceived"
            android:background="@color/blue"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_weight="1"
            android:layout_marginEnd="24dp"
            android:textColor="@color/colorReceived"
            android:background="@color/green"/>

    </LinearLayout>

</LinearLayout>