<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".roomSystem.SelectRoomActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectSpeaker"
        android:layout_gravity="center_horizontal"
        android:textSize="45sp"
        android:layout_marginTop="60dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/speaker_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/speaker_selected_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_weight="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/speaker_selected_finish"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:layout_weight="1"
            android:layout_marginEnd="24dp"
            android:textColor="@color/colorReceived"
            android:background="@color/green"/>

    </LinearLayout>

</LinearLayout>