<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/event_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/content_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/event_content_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="35dp"
                    app:cardCornerRadius="4dp">

                    <TextView
                        android:id="@+id/event_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textSize="20sp"/>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_event_announce_speaker"
                    android:layout_width="213dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/announceSpeaker"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textColor="@color/colorReceived"
                    android:background="@color/yellow"/>

                <Button
                    android:id="@+id/btn_event_announce_attendee"
                    android:layout_width="211dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/yellow"
                    android:text="@string/announceAttendee"
                    android:textAllCaps="false"
                    android:textColor="@color/colorReceived"
                    android:textSize="20sp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/btn_change_cap"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/changeCapacity"
                        android:layout_weight="1"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/colorReceived"
                        android:background="@color/blue"/>

                    <Button
                        android:id="@+id/btn_add_speaker"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/addSpeaker"
                        android:layout_weight="1"
                        android:layout_marginEnd="24dp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_cancel_event"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@color/red"
                    android:text="@string/cancelEvent"
                    android:textColor="@color/colorReceived" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>